# recall

./: .gitignore  Cargo.toml  README.ja.md  README.md  deny.toml
.analysis/: architecture.md  architecture.yaml
.config/: nextest.toml
.githooks/: pre-commit
.github/: dependabot.yml  zizmor.yml
.github/scripts/: filter_lcov_cfg_test.py  test_filter_lcov_cfg_test.py
.github/workflows/: ci.yml  label-from-issue.yml  release.yml
.playwright-cli/: page-2026-03-22T13-45-40-205Z.yml  page-2026-03-22T13-46-02-723Z.yml  page-2026-03-22T13-46-47-903Z.yml  page-2026-03-22T13-47-48-697Z.yml  page-2026-03-22T13-48-33-140Z.yml  page-2026-03-22T13-49-39-386Z.yml  page-2026-03-22T13-50-40-448Z.yml  page-2026-03-22T13-51-40-102Z.yml  page-2026-03-22T13-52-45-391Z.yml  page-2026-03-22T13-53-45-952Z.yml  page-2026-03-22T14-16-15-698Z.yml  page-2026-03-22T14-16-28-690Z.yml  page-2026-03-22T14-16-47-339Z.yml
docs/: PURPOSE.md
docs/audit/: 2026-06-14-154538-adr-gaps.md  2026-06-17-045233-adr-gaps.md  2026-06-24-020559-adr-gaps.md  2026-06-24-081729-adr-drift.md
docs/decisions/: 0001-freeze-the-json-output-envelope-as-a-stable-consumer-contract.md  0002-treat-persisted-and-emitted-string-tokens-as-a-stable-contract.md  0003-enforce-owner-only-0600-permission-on-index-database.md  0004-forbid-blanket-deletion-in-the-index-rebuild-path.md  0005-resolve-fts-hits-to-chunks-by-source-message-rowid-range.md  0006-adopt-recall-specific-exit-code-routing-extending-scout-adr-0066-group-2.md  0007-evolve-the-index-schema-without-a-version-table.md  0008-classify-session-type-by-first-turn-heuristic-with-fail-open-default.md  0009-preserve-the-recency-blend-sign-invariant-across-ranking-paths.md  0010-segment-cjk-queries-at-script-boundaries-with-a-min-anchor-gate.md  0011-never-skip-a-directory-by-its-mtime-in-incremental-indexing.md  0012-adopt-no-prefix-descriptive-test-names-repo-wide.md  README.md
docs/wiki/: README.md  _candidates.md  fts-vec-two-leg-symmetry.md  release-procedure.md  rev-lockstep-bump.md
src/: ansi.rs  chunker.rs  classify.rs  date.rs  db.rs  embedder.rs  envelope.rs  error.rs  hybrid.rs  indexer.rs  main.rs  modernbert.rs  output.rs  parser.rs  progress.rs  search.rs
src/ansi/: tests.rs
src/chunker/: tests.rs
src/classify/: tests.rs
src/date/: tests.rs
src/db/: tests.rs
src/embedder/: tests.rs
src/envelope/: tests.rs
src/error/: tests.rs
src/hybrid/: tests.rs
src/indexer/: tests.rs
src/output/: tests.rs
src/parser/: claude.rs  codex.rs  mod.rs  tests.rs
src/parser/claude/: tests.rs
src/parser/codex/: tests.rs
src/search/: tests.rs
tests/: adr_0009_degraded_routing_gate.rs  cli_integration.rs
tests/support/: root_skip.rs
workspace/delta/: delta-88e31cd4-0535-4073-b807-77f1274d1f14.md
workspace/doc-templates/: api.md  architecture.md  domain.md  setup.md
