[package]
name = "recall"
version = "0.7.0"
edition = "2024"
description = "Full-text search CLI for past Claude Code and Codex sessions"
license = "MIT"
repository = "https://github.com/thkt/recall"

[features]
test-support = ["rurico/test-support"]

[dependencies]
anyhow = ">=1"
clap = { version = ">=4", features = ["derive", "env"] }
dirs = ">=6"
rurico = { git = "https://github.com/thkt/rurico", rev = "dd1ad45" }
rusqlite = { version = ">=0.39", features = ["bundled"] }
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
sha2 = ">=0.10"

[dev-dependencies]
rurico = { git = "https://github.com/thkt/rurico", rev = "dd1ad45", features = ["test-support"] }
serial_test = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# フルパス使用検出
absolute_paths = "deny"
# Rustイディオム (RUST.md idioms table)
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# インポート
wildcard_imports = "deny"
enum_glob_use = "deny"
# 文字列
str_to_string = "deny"
# 引数
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
