[package]
name = "recall"
version = "0.7.0"
edition = "2024"
rust-version = "1.95"
description = "Full-text search CLI for past Claude Code and Codex sessions"
license = "MIT"
repository = "https://github.com/thkt/recall"

[features]
test-support = ["rurico/test-support"]

[dependencies]
amici = { git = "https://github.com/thkt/amici", rev = "dddbef0" }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
hex = "0.4.3"
rurico = { git = "https://github.com/thkt/rurico", rev = "7b739d1" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
amici = { git = "https://github.com/thkt/amici", rev = "dddbef0", features = ["test-support"] }
rurico = { git = "https://github.com/thkt/rurico", rev = "7b739d1", features = ["test-support"] }
serial_test = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# absolute paths
absolute_paths = "deny"
# idiomatic iterators
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# imports
wildcard_imports = "deny"
enum_glob_use = "deny"
# strings
str_to_string = "deny"
# arguments
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
